variables.RunHalf.scala.error
Compilation error:
RunHalf:8: error: java.awt.Color does not take parameters
  if (Color.orange()){
                  ^